# CAN-USB-dongle-fw

./: .gdbinit  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.include.jinja  README.md  STM32F302x8.ld  build.sh  openocd.cfg  package.yml  protocol_spec.md  requirements.txt  rules.mk  version.sh
.github/workflows/: build.yml  unittests.yml
ci/: build.sh  install.sh
python/: setup.py
python/cvra_can/: __init__.py  can.py
python/cvra_can/tools/: candump.py
python/tests/: test_can.py
src/: board.h  bus_power.c  bus_power.h  can_bridge.c  can_bridge.h  can_driver.c  can_driver.h  chconf.h  device_info.h  halconf.h  main.c  mcuconf.h  protocol.c  protocol.h  slcan.c  slcan.h  slcan_driver.c  slcan_driver.h  slcan_thread.c  slcan_thread.h  src.mk  timestamp_stm32_settings.h  uart_bridge.c  uart_bridge.h  usbcfg.c  usbcfg.h  usbcfg2.c  version.h
src/board/: board_functions.h
src/board/CAN-USB-dongle/RevA/: board.c  board.h  board.mk
src/board/CAN-USB-dongle/RevC/: board.c  board.h  board.mk
src/board/nucleo/: board.c  board.h  board.mk  nucleo-f302r8-prototype.md
tests/: CMakeLists.txt  slcan_test.cpp  timestamp_test.cpp
tools/: README.md  setup.py
tools/cvra_can_usb_dongle/: power.py
